--- a/Proyecto_POO_MitziVargas/App.config
+++ b/Proyecto_POO_MitziVargas/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Proyecto_POO_MitziVargas.Properties.Settings.FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIConnectionString"
+            connectionString="Data Source=DESKTOP-BQM0IO4;Initial Catalog=FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZI;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
