--- a/Proyecto_POO_MitziVargas/CapaPresntacion.csproj
+++ b/Proyecto_POO_MitziVargas/CapaPresntacion.csproj
@@ -35,6 +35,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.1.5, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.SqlClient.4.8.5\lib\net461\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,14 +49,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Configuracion_Conexion.cs" />
+    <Compile Include="FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="FrmInicioMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmInicioMenu.Designer.cs">
+      <DependentUpon>FrmInicioMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmSolicitudGira.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSolicitudGira.Designer.cs">
+      <DependentUpon>FrmSolicitudGira.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmInicioMenu.resx">
+      <DependentUpon>FrmInicioMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSolicitudGira.resx">
+      <DependentUpon>FrmSolicitudGira.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +83,20 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsc">
+      <DependentUpon>FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xss">
+      <DependentUpon>FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -85,6 +119,21 @@
       <Project>{23ea3b78-2c36-42f6-95e1-f14678e624c5}</Project>
       <Name>Logica</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Funcionarios.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Funcionarios1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Horario.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Horarios.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LugaresV.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
