--- a/Proyecto_POO_MitziVargas/App.config
+++ b/Proyecto_POO_MitziVargas/App.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Proyecto_POO_MitziVargas.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
-    <connectionStrings>
-        <add name="Proyecto_POO_MitziVargas.Properties.Settings.FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIConnectionString"
-            connectionString="Data Source=DESKTOP-BQM0IO4;Initial Catalog=FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZI;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <Proyecto_POO_MitziVargas.Properties.Settings>
+            <setting name="ConnectionString" serializeAs="String">
+                <value>Data Source=DESKTOP-BQM0IO4;Initial Catalog=FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZI;Integrated Security=True</value>
+            </setting>
+        </Proyecto_POO_MitziVargas.Properties.Settings>
+    </applicationSettings>
 </configuration>
