--- a/Proyecto_POO_MitziVargas/Properties/Settings.settings
+++ b/Proyecto_POO_MitziVargas/Properties/Settings.settings
@@ -2,12 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Proyecto_POO_MitziVargas.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-BQM0IO4;Initial Catalog=FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZI;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+    <Setting Name="ConnectionString" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Data Source=DESKTOP-BQM0IO4;Initial Catalog=FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZI;Integrated Security=True</Value>
     </Setting>
   </Settings>
