--- a/Proyecto_POO_MitziVargas/CapaPresntacion.csproj
+++ b/Proyecto_POO_MitziVargas/CapaPresntacion.csproj
@@ -55,6 +55,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FLOTA_VEHICULAR_BD_PROYECTO_POO_MITZIDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FrmFuncionarioChofer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFuncionarioChofer.Designer.cs">
+      <DependentUpon>FrmFuncionarioChofer.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmFuncionarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,8 +79,17 @@
     <Compile Include="FrmSolicitudGira.Designer.cs">
       <DependentUpon>FrmSolicitudGira.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmVehiculo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmVehiculo.Designer.cs">
+      <DependentUpon>FrmVehiculo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmFuncionarioChofer.resx">
+      <DependentUpon>FrmFuncionarioChofer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmFuncionarios.resx">
       <DependentUpon>FrmFuncionarios.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmSolicitudGira.resx">
       <DependentUpon>FrmSolicitudGira.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmVehiculo.resx">
+      <DependentUpon>FrmVehiculo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
